[package]
name = "rustPosMerge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="1.4.0"
ndarray = "0.15.4"
zmq="0.10.0"
ctrlc="3.4.1"
sqlx = { version = "0.5.7", features = ["runtime-async-std", "macros"] }
#sqlx-mssql = "0.5.0"